--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             color: var(--text-dark);
             line-height: 1.6;
             scroll-behavior: smooth;
+            width: 100%;
+            max-width: 100vw;
         }
 
         /* Hlavička a navigace */
@@ -39,6 +41,7 @@
             position: fixed;
             width: 100%;
             top: 0;
+            left: 0;
             box-sizing: border-box;
             z-index: 1000;
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
@@ -46,7 +49,7 @@
 
         .logo { font-size: 1.8rem; font-weight: bold; letter-spacing: 1px; }
 
-        /* Nastavení standardního menu (PC) */
+        /* Nastavení standardního menu */
         nav ul { 
             list-style: none; 
             display: flex; 
@@ -63,7 +66,7 @@
         }
         nav ul li a:hover { opacity: 0.7; }
 
-        /* Hamburger ikona (Skrytá na PC) */
+        /* Hamburger ikona */
         .hamburger {
             display: none;
             flex-direction: column;
@@ -82,18 +85,25 @@
             font-size: 1.8rem; 
             font-weight: bold; 
             letter-spacing: 1px;
-            display: flex;         /* Aligns image and text in a row */
-            align-items: center;   /* Centers them vertically */
-            gap: 12px;             /* Adds a nice gap between the image and text */
+            display: flex;
+            align-items: center;
+            gap: 12px;
         }
 
-        /* Controls the size of your SVG so it fits the header */
         .logo-icon {
             height: 40px; 
             width: auto;
-            background-color: var(--white); /* This gives it the white box */
-            padding: 5px;                   /* This gives the logo some breathing room inside the box */
-            border-radius: 6px;             /* This softly rounds the corners of the white box */
+            background-color: var(--white);
+            padding: 5px;
+            border-radius: 6px;
+        }
+
+        .image {
+            max-height: 100%; 
+            max-width: 100%;
+            background-color: var(--white);
+            padding: 5px;
+            border-radius: 6px;
         }
 
         /* Společné nastavení sekcí */
@@ -144,10 +154,10 @@
             display: flex;
             justify-content: center;
             margin-top: 20px;
-            width: 100%;
+            max-width: 100%;
         }
 
-        /* KONTAKTNÍ SEKCE - Formulář a Mapa */
+        /* Formulář a Mapa */
         .contact-container {
             display: flex;
             flex-wrap: wrap;
@@ -273,8 +283,7 @@
 
     <section id="uvod">
         <div class="container">
-            <br><br>
-            <img src="AutisMyTy.svg" alt="Logo AutisMyTy">
+            <img src="AutisMyTy.svg" alt="Logo AutisMyTy" class="image">
             <h1>AutisMyTy</h1>
             <p>Tvoříme prostor, kde se můžeme setkávat, sdílet zkušenosti a navazovat nová přátelství bez předsudků.</p>
             <a href="#informace" class="btn">Zjistit více o nás</a>
@@ -293,9 +302,9 @@
         <div class="container">
             <h2>Co je u nás nového</h2>
             <p>Sledujte aktuální dění, fotografie a příběhy z naší organizace přímo z našeho Facebooku.</p>
-            
+
             <div class="fb-wrapper">
-                <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fprofile.php%3Fid%3D61583014940092&tabs=timeline&width=500&height=700&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="500" height="700" style="border:none; overflow:hidden; width:100%; max-width:500px; border-radius: 8px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fprofile.php%3Fid%3D61583014940092&tabs=timeline&width=500&height=700&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="500" height="700" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
             </div>
         </div>
     </section>
@@ -329,7 +338,7 @@
                     <h3>Kde nás najdete</h3>
                     <p><strong>E-mail:</strong> autismyty@gmail.com<br>
                     <strong>Telefon:</strong> +420 777 826 124<br>
-                    <strong>Adresa:</strong> KC Všichni spolu, Ostrava-Poruba
+                    <strong>Adresa:</strong> Karla Pokorného 447/52a, Ostrava-Poruba<br>
                     <strong>Transparentní účet:</strong> <a href="https://ib.fio.cz/ib/transparent?a=2303377162" target="_blank">2303377162/2010</a><br></p>                 
                     <div class="map-responsive">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3233.237181121573!2d18.1795996!3d49.838928700000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4713e1e4e7987e5f%3A0xec49a056df9bde13!2sKomunitn%C3%AD%20centrum%20V%C5%A1ichni%20spolu!5e1!3m2!1scs!2scz!4v1771062534129!5m2!1scs!2scz" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
