--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         /* Základní barvy a písmo */
         :root {
             --primary-blue: #0056b3;
+            --dark-blue: #003f83;
             --light-blue: #f0f8ff;
             --text-dark: #333333;
             --white: #ffffff;
@@ -44,10 +45,9 @@
             left: 0;
             box-sizing: border-box;
             z-index: 1000;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.3);
         }
 
-        .logo { font-size: 1.8rem; font-weight: bold; letter-spacing: 1px; }
 
         /* Nastavení standardního menu */
         nav ul { 
@@ -108,6 +108,7 @@
 
         /* Společné nastavení sekcí */
         section {
+            position: relative;
             padding: 7rem 2rem 4rem;
             min-height: 60vh;
             display: flex;
@@ -206,6 +207,21 @@
             left: 0; top: 0; height: 100%; width: 100%; position: absolute; border: 0;
         }
 
+        .wave-bottom {
+            position: absolute;
+            bottom: -1px; /* -1px zabraňuje tenké mezeře na některých monitorech */
+            left: 0;
+            width: 100%;
+            overflow: hidden;
+            line-height: 0;
+        }
+
+        .wave-bottom svg {
+            display: block;
+            width: calc(100% + 1.3px);
+            height: 60px; /* Zde můžete upravit výšku vlny */
+        }
+
         /* Patička */
         footer {
             background-color: var(--primary-blue);
@@ -278,7 +294,7 @@
             <span></span>
             <span></span>
         </div>
-
+        
     </header>
 
     <section id="uvod">
@@ -288,6 +304,13 @@
             <p>Tvoříme prostor, kde se můžeme setkávat, sdílet zkušenosti a navazovat nová přátelství bez předsudků.</p>
             <a href="#informace" class="btn">Zjistit více o nás</a>
         </div>
+
+        <div class="wave-bottom">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" preserveAspectRatio="none">
+                <path fill="#f0f8ff" fill-opacity="1" d="M0,160L48,170.7C96,181,192,203,288,197.3C384,192,480,160,576,165.3C672,171,768,213,864,218.7C960,224,1056,192,1152,165.3C1248,139,1344,117,1392,106.7L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
+            </svg>
+        </div>
+
     </section>
 
     <section id="informace">
@@ -296,6 +319,13 @@
             <p>Jsme nově založená nezisková organizace  <b>AutisMyTy z.s.</b>, která vznikla z iniciativy rodičů dětí s poruchou autistického spektra (PAS). Naším cílem je podpora rodin a dětí s PAS, zejména v oblasti volného času, rozvoje sociálních a komunikačních dovedností a vzájemné rodičovské podpory.</p>
             <p>Naším posláním je spojovat rodiny a děti v prostředí přijetí, porozumění a lidskosti. Přinášíme příležitosti k rozvoji, radosti, sdílení a respektujícím mezilidským vztahům.</p>
         </div>
+
+        <div class="wave-bottom">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" preserveAspectRatio="none">
+                <path fill="#ffffff" fill-opacity="1" d="M0,160L48,170.7C96,181,192,203,288,197.3C384,192,480,160,576,165.3C672,171,768,213,864,218.7C960,224,1056,192,1152,165.3C1248,139,1344,117,1392,106.7L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
+            </svg>
+        </div>
+
     </section>
 
     <section id="novinky">
@@ -307,6 +337,13 @@
                 <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fprofile.php%3Fid%3D61583014940092&tabs=timeline&width=500&height=700&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="500" height="700" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
             </div>
         </div>
+
+        <div class="wave-bottom">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" preserveAspectRatio="none">
+                <path fill="#f0f8ff" fill-opacity="1" d="M0,160L48,170.7C96,181,192,203,288,197.3C384,192,480,160,576,165.3C672,171,768,213,864,218.7C960,224,1056,192,1152,165.3C1248,139,1344,117,1392,106.7L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
+            </svg>
+        </div>
+
     </section>
 
     <section id="kontakt">
@@ -347,6 +384,13 @@
 
             </div>
         </div>
+
+        <div class="wave-bottom">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" preserveAspectRatio="none">
+                <path fill="#0056b3" fill-opacity="1" d="M0,96L60,112C120,128,240,160,360,160C480,160,600,128,720,112C840,96,960,96,1080,112C1200,128,1320,160,1380,176L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
+            </svg>
+        </div>
+
     </section>
 
     <footer>
