--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
                 background-color: var(--primary-blue);
                 text-align: center;
                 box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+                border-bottom-left-radius: 5px;
 
                 max-height: 0;       /* Animace začíná na 0 height */
                 padding: 0;          /* Animace začíná na 0 padding */
