--- a/index.html
+++ b/index.html
@@ -88,9 +88,13 @@
         <div class="container">
             <h2>Naše momenty</h2>
             <p>Nahlédněte do světa setkání, které organizujeme. <br>
-            <small><em>(Posouvejte fotky do strany &rarr;)</em></small></p>
             
+        <div class="gallery-wrapper">
+            <button class="gallery-nav prev" id="prevBtn">❮</button>
             <div id="gallery-container" class="gallery-scroll"></div>
+            <button class="gallery-nav next" id="nextBtn">❯</button>
+            </div>
+        </div>
             
         </div>
 
