--- a/index.html
+++ b/index.html
@@ -35,16 +35,10 @@
 
     <section id="uvod">
         <div class="container">
-            <img src="AutisMyTy.svg" alt="Logo AutisMyTy" class="image">
+            <img src="AutisMyTy.svg" alt="Logo AutisMyTy" class="image-logo">
             <h1>AutisMyTy</h1>
-            <p>Tvoříme prostor, kde se můžeme setkávat, sdílet zkušenosti a navazovat nová přátelství bez předsudků.</p>
-            <a href="#informace" class="btn">Zjistit více o nás</a>
-        </div>
-
-        <div class="wave-bottom">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" preserveAspectRatio="none">
-                <path fill="#f0f8ff" fill-opacity="1" d="M0,96L60,112C120,128,240,160,360,160C480,160,600,128,720,112C840,96,960,96,1080,112C1200,128,1320,160,1380,176L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
-            </svg>
+            <p class="white">Tvoříme prostor, kde se můžeme setkávat, sdílet zkušenosti a navazovat nová přátelství bez předsudků.</p>
+            <a href="#informace" class="btn-white">Zjistit více o nás</a>
         </div>
 
     </section>
@@ -58,12 +52,6 @@
 
         </div>
 
-        <div class="wave-bottom">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" preserveAspectRatio="none">
-                <path fill="#ffffff" fill-opacity="1" d="M0,96L60,112C120,128,240,160,360,160C480,160,600,128,720,112C840,96,960,96,1080,112C1200,128,1320,160,1380,176L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
-            </svg>
-        </div>
-
     </section>
 
     <section id="novinky">
@@ -74,12 +62,6 @@
             <div class="fb-wrapper">
                 <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fprofile.php%3Fid%3D61583014940092&tabs=timeline&width=500&height=700&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="500" height="700" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
             </div>
-        </div>
-
-        <div class="wave-bottom">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" preserveAspectRatio="none">
-                <path fill="#f0f8ff" fill-opacity="1" d="M0,96L60,112C120,128,240,160,360,160C480,160,600,128,720,112C840,96,960,96,1080,112C1200,128,1320,160,1380,176L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
-            </svg>
         </div>
 
     </section>
@@ -101,12 +83,6 @@
         <div id="image-modal" class="gallery-modal">
             <span class="close-modal">&times;</span>
             <img id="modal-image" src="" alt="Zvětšená fotka">
-        </div>
-
-        <div class="wave-bottom">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" preserveAspectRatio="none">
-                <path fill="#ffffff" fill-opacity="1" d="M0,96L60,112C120,128,240,160,360,160C480,160,600,128,720,112C840,96,960,96,1080,112C1200,128,1320,160,1380,176L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
-            </svg>
         </div>
 
     </section>
@@ -148,12 +124,6 @@
                 </div>
 
             </div>
-        </div>
-
-        <div class="wave-bottom">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" preserveAspectRatio="none">
-                <path fill="#0056b3" fill-opacity="1" d="M0,96L60,112C120,128,240,160,360,160C480,160,600,128,720,112C840,96,960,96,1080,112C1200,128,1320,160,1380,176L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
-            </svg>
         </div>
 
     </section>
